# Apotris-Android

./: .gitignore  README.md  build-universal.ps1  build.ps1  parity.md
.github/: nightly-release-notes.md
.github/workflows/: nightly-android.yml  nightly-github-release.yml
android-port/: AndroidManifest.xml
android-port/java/com/apotris/android/: ApotrisActivity.java  ApotrisAssetLoader.java  SplashActivity.java
android-port/java/org/libsdl/app/: SDLActivity.java  SDLSurface.java
android-port/kotlin/com/apotris/android/: ControllerMonitor.kt  GamepadLayoutFactory.kt  GamepadThemePresets.kt  OverlayEditor.kt  PortraitGamepadPrefs.kt  TouchOverlayManager.kt  VirtualGamepadMapping.kt
android-port/res/drawable/: gamepad_pixel_a.xml  gamepad_pixel_b.xml  gamepad_pixel_l.xml  gamepad_pixel_r.xml  gamepad_pixel_select.xml  gamepad_pixel_start.xml  ic_launcher_foreground.xml  ic_launcher_round.xml
android-port/res/drawable-nodpi/: splash_animation.xml  splash_icon.xml
android-port/res/values/: colors.xml  strings.xml  themes_splash.xml
docs/: android-multi-architecture-apk.md  android-power-fps-profiling.md  portrait-radial-gamepad-implementation-plan.md  portrait-radial-gamepad-overhaul-plan.md
docs/reimplementation/: INVENTORY-decompiled.md  JNI.md  PLAN.md  README.md  TASKS.md
main/: implementation_plan.md
main/apotris/: .clang-format-ignore  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  CONTRIBUTING.md  Dockerfile  Dockerfile-arm64  Dockerfile-linux  README.md  convertAll.sh  gitlab-ci.yml  meson.build  meson.options
main/apotris/.gitea/workflows/: pr.yaml  release.yml
main/apotris/assets/: manifest.txt  meson.build
main/apotris/assets/shaders/: crt-pi.glsl  meson.build  zfast_lcd.glsl
main/apotris/conversionScripts/: convertClassic.sh  convertFont.sh  convertMeter.sh  convertMini.sh  convertMoves.sh  convertPlaceEffect.sh  convertSprites.sh  convertTitle.sh
main/apotris/data/: meson.build
main/apotris/include/: Tilengine.h  achievementStructure.h  audio_files.h  blockEngine.hpp  def.h  detectEmulators.h  flashSaves.h  gbfs.h  gbp_logo.hpp  interrupt.h  liba_gba.h  liba_mm.h  liba_n3ds.h  liba_pc.h  liba_portmaster.h  liba_sdl_audio.hpp  liba_switch.h  liba_web.h  liba_window.h  logging.h  menu.h  multiboot_binary.h  multiplayerClasses.h  nanotime.h  platform.hpp  posprintf.h  prng.h  qrcodegen.h  rumblePatterns.hpp  save.h  scene.hpp  sceneAudio.hpp  sceneColorEditor.hpp  sceneControls.hpp  sceneGameplay.hpp  sceneGraphics.hpp  sceneHandling.hpp  sceneModes.hpp  sceneSaving.hpp  sceneSleep.hpp  (+11 more)
main/apotris/include/glad/: gl.h  gles2.h
main/apotris/include/n3ds/: audio.hpp  citro3d++.hpp  ctru++.hpp  maybe_uninit.hpp  renderer.hpp  renderer_p.hpp
main/apotris/include/sfMod/: Error.h
main/apotris/meson/: android-arm64.ini  emscripten.ini  linux-arm64.ini  linux-x86_64.ini  mingw-macOS.ini  mingw.ini  mingw32-macOS.ini  mingw32.ini  msvc.ini  n3ds.ini  portmaster.ini  switch.ini
main/apotris/source/: audio_files.cpp  blockEngine.cpp  bot.cpp  descriptions.cpp  detectEmulators.c  flashSaves.cpp  game.cpp  gbp_logo.cpp  gl.c  gles2.c  interrupt.cpp  liba_android_jni.cpp  liba_gba.cpp  liba_mm.cpp  liba_n3ds.cpp  liba_pc.cpp  liba_portmaster.cpp  liba_sdl_audio.cpp  liba_switch.cpp  liba_web.cpp  liba_window.cpp  main.cpp  menuSystem.cpp  menus.cpp  multiplayer.cpp  multiplayerClasses.cpp  music.cpp  nanotime.c  prng.cpp  qrcodegen.c  rumblePatterns.cpp  saving.cpp  scene.cpp  screenAudio.cpp  screenColorEditor.cpp  screenControls.cpp  screenCredits.cpp  screenGraphics.cpp  screenHandling.cpp  screenLinks.cpp  (+10 more)
main/apotris/source/n3ds/: audio.cpp  cia.rsf  renderer.cpp  shader_bg.g.pica  shader_bg.v.pica  shader_bg_mosaic_tex.v.pica  shader_gradient.v.pica  shader_simple_tex.v.pica  shader_sprite.v.pica
main/apotris/source/n3ds/imgui/: README.md  meson.build
main/apotris/source/n3ds/imgui/ftpd/: imgui_citro3d.cpp  imgui_citro3d.h  imgui_ctru.cpp  imgui_ctru.h  vshader.v.pica
main/apotris/source/n3ds/imgui/imgui_club/: imgui_memory_editor.h
main/apotris/subprojects/: Tilengine.wrap  gba-link-connection.wrap  gba-rumble.wrap  libsavgba.wrap  libtonc.wrap  libutil.wrap  maxmod.wrap  mmutil.wrap  posprintf.wrap  sdk-seven.wrap  tracy.wrap
main/apotris/subprojects/SDL2-2.28.5/src/sensor/android/: SDL_android_compat.h  SDL_androidsensor.c
main/apotris/subprojects/packagefiles/Tilengine/: meson.build
main/apotris/subprojects/packagefiles/gba-rumble/: meson.build
main/apotris/subprojects/packagefiles/libtonc/: meson.build
main/apotris/subprojects/packagefiles/maxmod/: meson.build
main/apotris/subprojects/packagefiles/mmutil/: meson.build
main/apotris/tmp/: find_stl.py
main/apotris/tools/: README.tooling.md  README.txt  README_LINUX.txt  README_MAC.txt  README_SWITCH.txt  build.sh  buildSongs.bat  buildSongs.py  buildSongs.sh  buildSoundbank.py  callBin2S.py  gbaBuild.py  globSources.py  makeBase.py  multibootBuild.py  picasso_wrapper.py  pocket.py  qr.py  sound_effects.txt  soundbank.h  switchMakeNRO.py
tools/android/: android-perf-snapshot.ps1  perfetto-game.textproto
tools/ci/: sync-apotris-subprojects.ps1
tools/decompile/: Decompile-PhoneApk.ps1
