binary_files = files(
    'classic10tiles.bin',
    'classic11tiles.bin',
    'classic12tiles.bin',
    'classic13tiles.bin',
    'classic14tiles.bin',
    'classic15tiles.bin',
    'classic16tiles.bin',
    'classic1tiles.bin',
    'classic2tiles.bin',
    'classic3tiles.bin',
    'classic4tiles.bin',
    'classic5tiles.bin',
    'classic6tiles.bin',
    'classic7tiles.bin',
    'classic8tiles.bin',
    'classic9tiles.bin',
    'classic_pal.bin',
    'defaultGradient.bin',
    'discord_qr.bin',
    'effect10_tiles.bin',
    'effect11_tiles.bin',
    'effect12_tiles.bin',
    'effect13_tiles.bin',
    'effect14_tiles.bin',
    'effect15_tiles.bin',
    'effect1_tiles.bin',
    'effect2_tiles.bin',
    'effect3_tiles.bin',
    'effect4_tiles.bin',
    'effect5_tiles.bin',
    'effect6_tiles.bin',
    'effect7_tiles.bin',
    'effect8_tiles.bin',
    'effect9_tiles.bin',
    'effect_locations.bin',
    'font1tiles.bin',
    'font2tiles.bin',
    'font_pal.bin',
    'meter1_tiles.bin',
    'meter2_tiles.bin',
    'meter3_tiles.bin',
    'meter4_tiles.bin',
    'move1map.bin',
    'move1tiles.bin',
    'move2map.bin',
    'move2tiles.bin',
    'move3map.bin',
    'move3tiles.bin',
    'move4map.bin',
    'move4tiles.bin',
    'move5map.bin',
    'move5tiles.bin',
    'move6map.bin',
    'move6tiles.bin',
    'move7map.bin',
    'move7tiles.bin',
    'move8map.bin',
    'move8tiles.bin',
    'paypal_qr.bin',
    'site_qr.bin',
    'small.bin',
    'small10map.bin',
    'small10tiles.bin',
    'small11map.bin',
    'small11tiles.bin',
    'small12map.bin',
    'small12tiles.bin',
    'small13map.bin',
    'small13tiles.bin',
    'small14map.bin',
    'small14tiles.bin',
    'small1map.bin',
    'small1tiles.bin',
    'small2map.bin',
    'small2tiles.bin',
    'small3map.bin',
    'small3tiles.bin',
    'small4map.bin',
    'small4tiles.bin',
    'small5map.bin',
    'small5tiles.bin',
    'small6map.bin',
    'small6tiles.bin',
    'small7map.bin',
    'small7tiles.bin',
    'small8map.bin',
    'small8tiles.bin',
    'small9map.bin',
    'small9tiles.bin',
    'soundbank.bin',
    'sprite10map.bin',
    'sprite10tiles.bin',
    'sprite11map.bin',
    'sprite11tiles.bin',
    'sprite12map.bin',
    'sprite12tiles.bin',
    'sprite13map.bin',
    'sprite13tiles.bin',
    'sprite14map.bin',
    'sprite14tiles.bin',
    'sprite15map.bin',
    'sprite15tiles.bin',
    'sprite16map.bin',
    'sprite16tiles.bin',
    'sprite17map.bin',
    'sprite17tiles.bin',
    'sprite18map.bin',
    'sprite18tiles.bin',
    'sprite19map.bin',
    'sprite19tiles.bin',
    'sprite1map.bin',
    'sprite1tiles.bin',
    'sprite20map.bin',
    'sprite20tiles.bin',
    'sprite21map.bin',
    'sprite21tiles.bin',
    'sprite22map.bin',
    'sprite22tiles.bin',
    'sprite23map.bin',
    'sprite23tiles.bin',
    'sprite24map.bin',
    'sprite24tiles.bin',
    'sprite25map.bin',
    'sprite25tiles.bin',
    'sprite26map.bin',
    'sprite26tiles.bin',
    'sprite27map.bin',
    'sprite27tiles.bin',
    'sprite28map.bin',
    'sprite28tiles.bin',
    'sprite29map.bin',
    'sprite29tiles.bin',
    'sprite2map.bin',
    'sprite2tiles.bin',
    'sprite30map.bin',
    'sprite30tiles.bin',
    'sprite31map.bin',
    'sprite31tiles.bin',
    'sprite32map.bin',
    'sprite32tiles.bin',
    'sprite33map.bin',
    'sprite33tiles.bin',
    'sprite34map.bin',
    'sprite34tiles.bin',
    'sprite35map.bin',
    'sprite35tiles.bin',
    'sprite36map.bin',
    'sprite36tiles.bin',
    'sprite37map.bin',
    'sprite37tiles.bin',
    'sprite38map.bin',
    'sprite38tiles.bin',
    'sprite39map.bin',
    'sprite39tiles.bin',
    'sprite3map.bin',
    'sprite3tiles.bin',
    'sprite40map.bin',
    'sprite40tiles.bin',
    'sprite41map.bin',
    'sprite41tiles.bin',
    'sprite42map.bin',
    'sprite42tiles.bin',
    'sprite43map.bin',
    'sprite43tiles.bin',
    'sprite44map.bin',
    'sprite44tiles.bin',
    'sprite45map.bin',
    'sprite45tiles.bin',
    'sprite46map.bin',
    'sprite46tiles.bin',
    'sprite47map.bin',
    'sprite47tiles.bin',
    'sprite48map.bin',
    'sprite48tiles.bin',
    'sprite49map.bin',
    'sprite49tiles.bin',
    'sprite4map.bin',
    'sprite4tiles.bin',
    'sprite50map.bin',
    'sprite50tiles.bin',
    'sprite51map.bin',
    'sprite51tiles.bin',
    'sprite52map.bin',
    'sprite52tiles.bin',
    'sprite53map.bin',
    'sprite53tiles.bin',
    'sprite54map.bin',
    'sprite54tiles.bin',
    'sprite55map.bin',
    'sprite55tiles.bin',
    'sprite56map.bin',
    'sprite56tiles.bin',
    'sprite57map.bin',
    'sprite57tiles.bin',
    'sprite58map.bin',
    'sprite58tiles.bin',
    'sprite59map.bin',
    'sprite59tiles.bin',
    'sprite60map.bin',
    'sprite60tiles.bin',
    'sprite61map.bin',
    'sprite61tiles.bin',
    'sprite5map.bin',
    'sprite5tiles.bin',
    'sprite6map.bin',
    'sprite6tiles.bin',
    'sprite7map.bin',
    'sprite7tiles.bin',
    'sprite8map.bin',
    'sprite8tiles.bin',
    'sprite9map.bin',
    'sprite9tiles.bin',
    'sprite_pal.bin',
    'title1tiles.bin',
    'title2tiles.bin',
    'title_pal.bin',
    'wiki_qr.bin',
)
